--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@
   justify-content: space-between;
   gap: 10px;
   min-width: 750px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
   .imgholder {
     width: 50%;
