--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,10 @@ table {
   padding: 15px;
   margin-top: 60px;
   display: flex;
+  min-width: 600px;
   justify-content: space-between;
   gap: 10px;
-  min-width: 750px;
+  max-width: 800px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .card .imgholder {
@@ -197,6 +198,18 @@ table {
   cursor: pointer;
   color: darkslategrey;
   background-color: bisque;
+}
+
+@media only screen and (max-width: 500px) {
+  .card {
+    width: 90%;
+    min-width: none;
+    flex-direction: column;
+    max-width: 80px;
+  }
+  .card .imgholder {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
