--- a/css/style.scss
+++ b/css/style.scss
@@ -10,9 +10,11 @@
   padding: 15px;
   margin-top: 60px;
   display: flex;
+  min-width: 600px;
   justify-content: space-between;
   gap: 10px;
-  min-width: 750px;
+
+  max-width: 800px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
   .imgholder {
